Yerelleştirme güncellemeleri yapıldı; Japonca dil desteği eklendi ve mevcut metinler güncellendi. Ayrıca, uygulama ayarları görünümünde dil seçeneği olarak Japonca eklendi. "Info.plist" dosyasında sağlık verileri için izin açıklamaları güncellendi. Uygulama sürümü 1.1'den 1.2'ye yükseltildi.

--- a/polynap/Resources/Localizations/Auth.xcstrings
+++ b/polynap/Resources/Localizations/Auth.xcstrings
@@ -16,6 +16,12 @@
             "state" : "translated",
             "value" : "Yerel Kullanıcı"
           }
+        },
+        "ja" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "ローカルユーザー"
+          }
         }
       }
     }
