--- a/polynap/Resources/Localizations/History/AddSleepEntrySheet.xcstrings
+++ b/polynap/Resources/Localizations/History/AddSleepEntrySheet.xcstrings
@@ -11,6 +11,12 @@
             "value" : "Add Sleep Entry"
           }
         },
+        "ja" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "睡眠の記録を追加"
+          }
+        },
         "tr" : {
           "stringUnit" : {
             "state" : "translated",
@@ -29,6 +35,12 @@
             "value" : "Cancel"
           }
         },
+        "ja" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "キャンセル"
+          }
+        },
         "tr" : {
           "stringUnit" : {
             "state" : "translated",
@@ -42,6 +54,12 @@
       "extractionState" : "stale",
       "localizations" : {
         "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "OK"
+          }
+        },
+        "ja" : {
           "stringUnit" : {
             "state" : "translated",
             "value" : "OK"
@@ -65,6 +83,12 @@
             "value" : "Save"
           }
         },
+        "ja" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "保存"
+          }
+        },
         "tr" : {
           "stringUnit" : {
             "state" : "translated",
@@ -81,6 +105,12 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "Bad sleep"
+          }
+        },
+        "ja" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "イマイチな睡眠"
           }
         },
         "tr" : {
@@ -101,6 +131,12 @@
             "value" : "Good sleep"
           }
         },
+        "ja" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "良い睡眠"
+          }
+        },
         "tr" : {
           "stringUnit" : {
             "state" : "translated",
@@ -117,6 +153,12 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "Neutral sleep"
+          }
+        },
+        "ja" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "普通の睡眠"
           }
         },
         "tr" : {
@@ -137,6 +179,12 @@
             "value" : "Okay sleep"
           }
         },
+        "ja" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "まあまあな睡眠"
+          }
+        },
         "tr" : {
           "stringUnit" : {
             "state" : "translated",
@@ -153,6 +201,12 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "Very bad sleep"
+          }
+        },
+        "ja" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "最悪の睡眠"
           }
         },
         "tr" : {
@@ -173,6 +227,12 @@
             "value" : "Very good sleep"
           }
         },
+        "ja" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "最高の睡眠"
+          }
+        },
         "tr" : {
           "stringUnit" : {
             "state" : "translated",
@@ -189,6 +249,12 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "Core"
+          }
+        },
+        "ja" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "コア"
           }
         },
         "tr" : {
@@ -209,6 +275,12 @@
             "value" : "Nap"
           }
         },
+        "ja" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "仮眠"
+          }
+        },
         "tr" : {
           "stringUnit" : {
             "state" : "translated",
@@ -225,6 +297,12 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "Add Sleep Entry"
+          }
+        },
+        "ja" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "睡眠を記録"
           }
         },
         "tr" : {
@@ -245,6 +323,12 @@
             "value" : "Date"
           }
         },
+        "ja" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "日付"
+          }
+        },
         "tr" : {
           "stringUnit" : {
             "state" : "translated",
@@ -261,6 +345,12 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "You can only add entries for today or past dates"
+          }
+        },
+        "ja" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "記録できるのは今日か過去の日付だけだよ"
           }
         },
         "tr" : {
@@ -281,6 +371,12 @@
             "value" : "This block is already added for the selected date."
           }
         },
+        "ja" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "このブロックはもう追加されてるよ"
+          }
+        },
         "tr" : {
           "stringUnit" : {
             "state" : "translated",
@@ -297,6 +393,12 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "This sleep block has not finished yet. You can only add entries for completed sleep blocks."
+          }
+        },
+        "ja" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "この睡眠はまだ終わってないよ。終わった睡眠だけ記録できるんだ。"
           }
         },
         "tr" : {
@@ -317,6 +419,12 @@
             "value" : "You cannot add sleep entries for future dates. Please select today or a past date."
           }
         },
+        "ja" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "未来の日付には記録できないよ。今日か過去の日付を選んでね。"
+          }
+        },
         "tr" : {
           "stringUnit" : {
             "state" : "translated",
@@ -333,6 +441,12 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "Sleep Entry Error"
+          }
+        },
+        "ja" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "記録エラー"
           }
         },
         "tr" : {
@@ -353,6 +467,12 @@
             "value" : "How did you feel?"
           }
         },
+        "ja" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "どんな感じだった？"
+          }
+        },
         "tr" : {
           "stringUnit" : {
             "state" : "translated",
@@ -369,6 +489,12 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "No available blocks"
+          }
+        },
+        "ja" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "記録できるブロックがないね"
           }
         },
         "tr" : {
@@ -389,6 +515,12 @@
             "value" : "Sleep Quality"
           }
         },
+        "ja" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "睡眠の質"
+          }
+        },
         "tr" : {
           "stringUnit" : {
             "state" : "translated",
@@ -405,6 +537,12 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "Sleep Rating"
+          }
+        },
+        "ja" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "睡眠スコア"
           }
         },
         "tr" : {
@@ -425,6 +563,12 @@
             "value" : "Select Sleep Block"
           }
         },
+        "ja" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "ブロックを選択"
+          }
+        },
         "tr" : {
           "stringUnit" : {
             "state" : "translated",
@@ -441,6 +585,12 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "Select Date"
+          }
+        },
+        "ja" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "日付を選択"
           }
         },
         "tr" : {
@@ -461,6 +611,12 @@
             "value" : "Bad"
           }
         },
+        "ja" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "イマイチ"
+          }
+        },
         "tr" : {
           "stringUnit" : {
             "state" : "translated",
@@ -477,6 +633,12 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "Excellent"
+          }
+        },
+        "ja" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "最高！"
           }
         },
         "tr" : {
@@ -497,6 +659,12 @@
             "value" : "Very Good"
           }
         },
+        "ja" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "すごく良い"
+          }
+        },
         "tr" : {
           "stringUnit" : {
             "state" : "translated",
@@ -513,6 +681,12 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "Good"
+          }
+        },
+        "ja" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "良い"
           }
         },
         "tr" : {
@@ -533,6 +707,12 @@
             "value" : "Okay"
           }
         },
+        "ja" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "まあまあ"
+          }
+        },
         "tr" : {
           "stringUnit" : {
             "state" : "translated",
@@ -551,6 +731,12 @@
             "value" : "Bad"
           }
         },
+        "ja" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "イマイチ"
+          }
+        },
         "tr" : {
           "stringUnit" : {
             "state" : "translated",
@@ -567,6 +753,12 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "Very Bad"
+          }
+        },
+        "ja" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "最悪"
           }
         },
         "tr" : {
